--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixel",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Pixel Design System's Web components for build stellar UI",
   "private": true,
   "main": "src/lib/components/index.js",
@@ -16,10 +16,10 @@
     "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.0.0-beta.44",
     "@babel/cli": "^7.0.0-beta.44",
     "@babel/core": "^7.0.0-beta.41",
     "@babel/plugin-transform-runtime": "^7.4.0",
+    "@babel/preset-env": "^7.0.0-beta.44",
     "@babel/runtime": "^7.4.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-react-app": "^7.0.2",
@@ -33,23 +33,26 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.0",
     "postcss-reporter": "^6.0.0",
-    "rimraf": "^2.6.3",
-    "stylelint": "^9.5.0",
-    "stylelint-config-standard": "^18.2.0",
+    "react": "^16.8.6",
     "react-autobind": "^1.0.6",
+    "react-dom": "^16.8.6",
     "react-gsap-enhancer": "^0.3.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^2.1.8",
     "react-select": "^2.1.2",
     "react-sizeme": "^2.5.2",
     "react-spring": "^5.9.2",
-    "react-transition-group": "^2.5.0"
+    "react-transition-group": "^2.5.0",
+    "rimraf": "^2.6.3",
+    "stylelint": "^9.5.0",
+    "stylelint-config-standard": "^18.2.0"
   },
   "peerDependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "dependencies": {
+    "accounting": "^0.4.1",
     "caniuse-lite": "^1.0.30000697",
     "classnames": "^2.2.5",
     "common-tags": "^1.8.0",
