--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__"
   },
   "devDependencies": {
+    "prop-types": "^15.6.0",
+    "fuse-box": "^3.5.0",
+    "typescript": "^3.0.3",
+    "uglify-es": "^3.3.9",
     "@babel/cli": "^7.0.0-beta.44",
     "@babel/core": "^7.0.0-beta.41",
     "@babel/plugin-transform-runtime": "^7.4.0",
