Reworking structure to point at dist (for now)

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "pixel",
-  "version": "0.1.86",
+  "version": "0.1.87",
   "description": "Pixel Design System's Web components for build stellar UI",
   "private": true,
-  "main": "dist/lib/components/index.js",
-  "module": "dist/pixel.js",
+  "main": "dist/pixel.js",
   "files": [
     "dist"
   ],
