--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "pixel",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Pixel Design System's Web components for build stellar UI",
   "private": true,
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build-examples": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
-    "parcel-dev": "parcel src/index.html"
+    "clean": "rm -rf ./dist",
+    "parcel-dev": "parcel src/index.html",
+    "parcel-build": "parcel build ./src/index.js --global pixel",
+    "sourcemap": "source-map-explorer --html ./dist/index.js ./dist/index.js.map > source-map.html"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "babel-loader": "^8.0.6",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "lodash": "^4.17.10",
+    "lodash.foreach": "^4.5.0",
+    "lodash.forin": "^4.4.0",
+    "lodash.merge": "^4.6.2",
     "normalize.css": "^8.0.0",
     "postcss": "^7.0.17",
     "postcss-custom-properties": "^9.0.2",
@@ -45,14 +49,14 @@
     "react-transition-group": "^2.5.0",
     "rimraf": "^2.6.3",
     "stylelint": "^9.5.0",
-    "stylelint-config-standard": "^18.2.0"
+    "stylelint-config-standard": "^18.2.0",
+    "source-map-explorer": "^2.0.1"
   },
   "peerDependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "dependencies": {
-    "accounting": "^0.4.1",
     "caniuse-lite": "^1.0.30000697",
     "classnames": "^2.2.5",
     "common-tags": "^1.8.0",
@@ -60,12 +64,7 @@
     "formik": "^1.3.1",
     "gsap": "^2.0.2",
     "hoist-non-react-statics": "^3.3.0",
-    "icons": "https://github.com/aaa-ncnu-ie/icons.git",
     "lib": "^4.0.2",
-    "lodash": "^4.17.10",
-    "lodash.foreach": "^4.5.0",
-    "lodash.forin": "^4.4.0",
-    "lodash.merge": "^4.6.2",
     "prop-types": "^15.6.0",
     "typeof": "^1.0.0",
     "yup": "^0.26.6"
