--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixel",
-  "version": "0.1.6",
+  "version": "0.1.8",
   "description": "Pixel Design System's Web components for build stellar UI",
   "private": true,
   "main": "dist/index.js",
@@ -11,63 +11,65 @@
     "sourcemap": "source-map-explorer --html ./dist/index.js ./dist/index.js.map > source-map.html"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.6.2",
     "babel-loader": "^8.0.6",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react": "^7.15.1",
     "lodash": "^4.17.10",
     "lodash.foreach": "^4.5.0",
     "lodash.forin": "^4.4.0",
     "lodash.merge": "^4.6.2",
     "normalize.css": "^8.0.0",
-    "postcss": "^7.0.17",
+    "parcel-bundler": "^1.12.3",
+    "postcss": "^7.0.18",
     "postcss-custom-properties": "^9.0.2",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-import": "^12.0.0",
-    "postcss-less": "^2.0.0",
-    "postcss-map": "^0.10.0",
+    "postcss-less": "^3.1.4",
+    "postcss-map": "^0.11.0",
     "postcss-mixins": "^6.2.0",
     "postcss-modules": "^1.4.1",
-    "postcss-nested": "^3.0.0",
+    "postcss-nested": "^4.1.2",
     "postcss-nesting": "^7.0.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-reporter": "^6.0.0",
-    "postcss-simple-vars": "^4.1.0",
-    "postcss-utilities": "^0.8.2",
-    "react": "^16.8.6",
+    "postcss-simple-vars": "^5.0.2",
+    "postcss-utilities": "^0.8.4",
+    "react": "^16.10.1",
     "react-autobind": "^1.0.6",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.10.1",
     "react-gsap-enhancer": "^0.3.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "^2.1.8",
-    "react-select": "^2.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.1.2",
+    "react-select": "^3.0.7",
     "react-sizeme": "^2.5.2",
-    "react-spring": "^5.9.2",
-    "react-transition-group": "^2.5.0",
-    "rimraf": "^2.6.3",
-    "stylelint": "^9.5.0",
-    "stylelint-config-standard": "^18.2.0",
-    "source-map-explorer": "^2.0.1"
+    "react-spring": "^8.0.27",
+    "react-transition-group": "^4.3.0",
+    "rimraf": "^3.0.0",
+    "source-map-explorer": "^2.1.0",
+    "stylelint": "^11.0.0",
+    "stylelint-config-standard": "^19.0.0"
   },
   "peerDependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "dependencies": {
-    "caniuse-lite": "^1.0.30000697",
+    "caniuse-lite": "^1.0.30000997",
     "classnames": "^2.2.5",
     "common-tags": "^1.8.0",
-    "dotenv": "^6.0.0",
+    "dotenv": "^8.1.0",
     "formik": "^1.3.1",
     "gsap": "^2.0.2",
     "hoist-non-react-statics": "^3.3.0",
-    "lib": "^4.0.2",
+    "lib": "^4.0.5",
     "prop-types": "^15.6.0",
     "typeof": "^1.0.0",
-    "yup": "^0.26.6"
+    "yup": "^0.27.0"
   },
   "browserslist": [
     "last 1 version",
