--- a/package.json
+++ b/package.json
@@ -8,13 +8,23 @@
     "clean": "rm -rf ./dist",
     "parcel-dev": "parcel src/index.html",
     "parcel-build": "parcel build ./src/index.js --global pixel",
-    "sourcemap": "source-map-explorer --html ./dist/index.js ./dist/index.js.map > source-map.html"
+    "sourcemap": "source-map-explorer --html ./dist/index.js ./dist/index.js.map > source-map.html",
+    "storybook": "start-storybook -p 6006 -s ./assets",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
     "@emotion/stylis": "^0.8.4",
+    "@storybook/addon-actions": "^5.2.3",
+    "@storybook/addon-links": "^5.2.3",
+    "@storybook/addons": "^5.2.3",
+    "@storybook/react": "^5.2.3",
+    "@storybook/addon-a11y": "^5.2.3",
+    "@storybook/addon-design-assets": "^5.2.3",
+    "@storybook/addon-info": "^5.2.3",
+    "@storybook/addon-knobs": "^5.2.3",
+    "@storybook/addon-notes": "^5.2.3",
+    "@storybook/addon-viewport": "^5.2.3",
     "autoprefixer": "^9.6.4",
-    "babel-loader": "^8.0.6",
     "cssnano": "^4.1.10",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
@@ -42,9 +52,7 @@
     "postcss-reporter": "^6.0.0",
     "postcss-simple-vars": "^5.0.2",
     "postcss-utilities": "^0.8.4",
-    "react": "^16.10.1",
     "react-autobind": "^1.0.6",
-    "react-dom": "^16.10.1",
     "react-gsap-enhancer": "^0.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.1.2",
@@ -58,10 +66,12 @@
     "stylelint-config-standard": "^19.0.0"
   },
   "peerDependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   },
   "dependencies": {
+    "@babel/core": "^7.6.2",
+    "babel-loader": "^8.0.6",
     "caniuse-lite": "^1.0.30000997",
     "classnames": "^2.2.5",
     "common-tags": "^1.8.0",
