--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@storybook/addon-a11y": "^5.2.3",
     "@storybook/addon-actions": "^5.2.3",
     "@storybook/addon-design-assets": "^5.2.3",
+    "@storybook/addon-docs": "^5.3.0-alpha.15",
     "@storybook/addon-info": "^5.2.3",
     "@storybook/addon-knobs": "^5.2.3",
     "@storybook/addon-links": "^5.2.3",
@@ -52,6 +53,7 @@
     "postcss-reporter": "^6.0.0",
     "postcss-simple-vars": "^5.0.2",
     "postcss-utilities": "^0.8.4",
+    "react": "^16.10.2",
     "react-autobind": "^1.0.6",
     "react-gsap-enhancer": "^0.3.0",
     "react-router-dom": "^5.1.2",
