--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
     "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
     "@emotion/stylis": "^0.8.4",
-    "@storybook/addon-a11y": "^5.2.3",
-    "@storybook/addon-actions": "^5.2.3",
-    "@storybook/addon-design-assets": "^5.2.3",
-    "@storybook/addon-info": "^5.2.3",
-    "@storybook/addon-knobs": "^5.2.3",
-    "@storybook/addon-links": "^5.2.3",
-    "@storybook/addon-notes": "^5.2.3",
-    "@storybook/addon-viewport": "^5.2.3",
-    "@storybook/addons": "^5.2.3",
-    "@storybook/react": "^5.2.3",
+    "@storybook/addon-a11y": "5.2.4",
+    "@storybook/addon-actions": "5.2.4",
+    "@storybook/addon-info": "5.2.4",
+    "@storybook/addon-knobs": "5.2.4",
+    "@storybook/addon-links": "5.2.4",
+    "@storybook/addon-notes": "5.2.4",
+    "@storybook/addon-viewport": "5.2.4",
+    "@storybook/addons": "5.2.4",
+    "@storybook/react": "5.2.4",
     "autoprefixer": "^9.6.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "cssnano": "^4.1.10",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
@@ -37,7 +40,7 @@
     "lodash.forin": "^4.4.0",
     "lodash.merge": "^4.6.2",
     "normalize.css": "^8.0.0",
-    "parcel-bundler": "^1.12.3",
+    "parcel-bundler": "^1.12.4",
     "postcss": "^7.0.18",
     "postcss-custom-properties": "^9.0.2",
     "postcss-flexbugs-fixes": "^4.1.0",
@@ -59,12 +62,14 @@
     "react-scripts": "^3.1.2",
     "react-select": "^3.0.7",
     "react-sizeme": "^2.5.2",
-    "react-spring": "^8.0.27",
+    "react-spring": "^9.0.0-beta.34",
     "react-transition-group": "^4.3.0",
+    "react-use-dimensions": "^1.2.1",
     "rimraf": "^3.0.0",
     "source-map-explorer": "^2.1.0",
     "stylelint": "^11.0.0",
-    "stylelint-config-standard": "^19.0.0"
+    "stylelint-config-standard": "^19.0.0",
+    "typescript": "^3.6.4"
   },
   "peerDependencies": {
     "react": "^16.10.2",
@@ -76,6 +81,7 @@
     "caniuse-lite": "^1.0.30000997",
     "classnames": "^2.2.5",
     "common-tags": "^1.8.0",
+    "core-js": "2",
     "dotenv": "^8.1.0",
     "formik": "^1.3.1",
     "gsap": "^2.0.2",
