--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean": "rm -rf ./dist",
     "parcel-dev": "parcel src/index.html",
     "parcel-build": "parcel build ./src/module.js --global pixel",
+    "parcel-build-watch": "parcel watch ./src/module.js --global pixel",
     "sourcemap": "source-map-explorer --html ./dist/index.js ./dist/index.js.map > source-map.html",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -16,16 +17,6 @@
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "@emotion/stylis": "^0.8.4",
-    "@storybook/addon-a11y": "5.2.4",
-    "@storybook/addon-actions": "5.2.4",
-    "@storybook/addon-info": "5.2.4",
-    "@storybook/addon-knobs": "5.2.4",
-    "@storybook/addon-links": "5.2.4",
-    "@storybook/addon-notes": "5.2.4",
-    "@storybook/addon-viewport": "5.2.4",
-    "@storybook/addons": "5.2.4",
-    "@storybook/react": "^5.2.8",
-    "@storybook/addon-docs": "^5.2.8",
     "autoprefixer": "^9.6.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -56,25 +47,20 @@
     "postcss-reporter": "^6.0.0",
     "postcss-simple-vars": "^5.0.2",
     "postcss-utilities": "^0.8.4",
-    "react": "^16.10.2",
     "react-autobind": "^1.0.6",
-    "react-gsap-enhancer": "^0.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.1.2",
     "react-select": "^3.0.7",
     "react-sizeme": "^2.5.2",
-    "react-spring": "^9.0.0-beta.34",
+    "react-spring": "^9.0.0-canary.809.5.f01ecc2",
     "react-transition-group": "^4.3.0",
     "react-use-dimensions": "^1.2.1",
     "rimraf": "^3.0.0",
-    "source-map-explorer": "^2.1.0",
     "stylelint": "^11.0.0",
     "stylelint-config-standard": "^19.0.0",
-    "typescript": "^3.6.4"
-  },
-  "peerDependencies": {
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "typescript": "^3.6.4",
+    "react": "16.12.0",
+    "react-dom": "16.12.0"
   },
   "dependencies": {
     "@babel/core": "^7.6.2",
@@ -85,10 +71,10 @@
     "core-js": "2",
     "dotenv": "^8.1.0",
     "formik": "^1.3.1",
-    "gsap": "^2.0.2",
     "hoist-non-react-statics": "^3.3.0",
     "lib": "^4.0.5",
     "prop-types": "^15.6.0",
+    "react-pose": "^4.0.10",
     "typeof": "^1.0.0",
     "yup": "^0.27.0"
   },
