--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.15.1",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "framer-motion": "^1.7.0",
     "lodash": "^4.17.15",
     "lodash.foreach": "^4.5.0",
     "lodash.forin": "^4.4.0",
     "lodash.merge": "^4.6.2",
     "normalize.css": "^8.0.0",
     "parcel-bundler": "^1.12.4",
+    "plugin": "^0.3.3",
     "postcss": "^7.0.18",
     "postcss-custom-properties": "^9.0.2",
     "postcss-flexbugs-fixes": "^4.1.0",
@@ -47,10 +50,13 @@
     "postcss-reporter": "^6.0.0",
     "postcss-simple-vars": "^5.0.2",
     "postcss-utilities": "^0.8.4",
+    "react": "^16.12.0",
     "react-autobind": "^1.0.6",
+    "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.1.2",
     "react-select": "^3.0.7",
+    "react-simple-animate": "^3.3.5",
     "react-sizeme": "^2.5.2",
     "react-spring": "^9.0.0-canary.809.5.f01ecc2",
     "react-transition-group": "^4.3.0",
@@ -58,9 +64,7 @@
     "rimraf": "^3.0.0",
     "stylelint": "^11.0.0",
     "stylelint-config-standard": "^19.0.0",
-    "typescript": "^3.6.4",
-    "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "typescript": "^3.6.4"
   },
   "dependencies": {
     "@babel/core": "^7.6.2",
@@ -77,6 +81,10 @@
     "react-pose": "^4.0.10",
     "typeof": "^1.0.0",
     "yup": "^0.27.0"
+  },
+  "peerDependencies": {
+    "react": "^16.10.x",
+    "react-dom": "^16.10.x"
   },
   "browserslist": [
     "last 1 version",
