Updated pixel's field stylings to look like gen5 design
Adding symlink for storybok to directly access pixel.  mklink /D Link dist

https://youtu.be/bH1tng4YeR4

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "parcel-serve": "parcel serve ./src/module.js --global pixel --target web",
     "parcel-build-watch": "parcel watch ./src/module.js --global pixel --target web",
     "sourcemap": "source-map-explorer --html ./dist/index.js ./dist/index.js.map > source-map.html",
-    "storybook": "start-storybook -s ./dist -p 9009",
+    "storybook": "start-storybook -s dist -p 9009 --ci",
     "build-storybook": "build-storybook",
     "svgr": "svgr -d src/Icons/standard/ assets/icons/standard/"
   },
